--- a/backend/package.json
+++ b/backend/package.json
@@ -4,13 +4,17 @@
   "description": "laundarycard backend",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon index.js"
+    "start": "nodemon index.js"
   },
-  "author": "",
+  "author": "Pritish",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.9.0",
+    "express-validator": "^6.14.3",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.9.1",
     "nodemon": "^2.0.20"
   }
 }
