--- a/backend/package.json
+++ b/backend/package.json
@@ -4,13 +4,15 @@
   "description": "laundarycard backend",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon index.js"
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^6.9.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.9.1",
     "nodemon": "^2.0.20"
   }
 }
